[package]
name = "filen-sdk-rs"
version = "0.0.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.7", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.8"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
serde_json = "1.0.128"
url = "2.5.2"
ring = "0.17.8"
hex = "0.4.3"
base64 = "0.22.1"
rpassword = "7.3.1"
